# kittiVisualOdometry

./: CMakeLists.txt  package.xml
config/: params.yaml
include/: kittiIO.hpp  utility.hpp
launch/: run.launch
src/: kittiIO.cpp  main.cpp
